unpackaged/main/default/objects/SurveyResult__c/fields/Pre_show__c.field-meta.xml
<CustomField>
    <fullName>Pre_show__c</fullName>
    <label>Pre-show</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delays experienced</fullName>
            </value>
            <value>
                <fullName>Difficult to make contact</fullName>
            </value>
            <value>
                <fullName>Errors</fullName>
            </value>
            <value>
                <fullName>Inadequate staff knowledge/advice</fullName>
            </value>
            <value>
                <fullName>Technical problems</fullName>
            </value>
            <value>
                <fullName>Unprofessional experience</fullName>
            </value>
            <value>
                <fullName>Vague information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>