unpackaged/main/default/objects/SurveyResult__c/fields/Pre_show_comments__c.field-meta.xml
<CustomField>
    <fullName>Pre_show_comments__c</fullName>
    <label>Pre- show comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>