unpackaged/main/default/objects/SurveyResult__c/fields/Pre_show_Planning_Ordering__c.field-meta.xml
<CustomField>
    <fullName>Pre_show_Planning_Ordering__c</fullName>
    <label>Pre- show  Planning / Ordering</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confusing process</fullName>
            </value>
            <value>
                <fullName>Delays</fullName>
            </value>
            <value>
                <fullName>Difficult to get in touch</fullName>
            </value>
            <value>
                <fullName>Order/invoice error</fullName>
            </value>
            <value>
                <fullName>Technical issues</fullName>
            </value>
            <value>
                <fullName>Unprofessional service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>