unpackaged/main/default/objects/SurveyResult__c/fields/Pre_show_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Pre_show_Telephone__c</fullName>
    <label>Pre- show  Telephone</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confusing/vague information</fullName>
            </value>
            <value>
                <fullName>Delays caused</fullName>
            </value>
            <value>
                <fullName>Difficulties getting through</fullName>
            </value>
            <value>
                <fullName>Errors</fullName>
            </value>
            <value>
                <fullName>Staff professionalism</fullName>
            </value>
            <value>
                <fullName>Technical problems</fullName>
            </value>
            <value>
                <fullName>Unsatisfactory knowledge/advice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>