unpackaged/main/default/objects/SurveyResult__c/fields/Preferred_social_media_site__c.field-meta.xml
<CustomField>
    <fullName>Preferred_social_media_site__c</fullName>
    <label>Preferred social media site</label>
    <length>254</length>
    <type>Text</type>
</CustomField>