unpackaged/main/default/objects/SurveyResult__c/fields/Q17_Why_do_you_say_that__c.field-meta.xml
<CustomField>
    <fullName>Q17_Why_do_you_say_that__c</fullName>
    <label>Q17. Why do you say that?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>