unpackaged/main/default/objects/SurveyResult__c/fields/Q18_Why_wasn_t_your_problem_resolved__c.field-meta.xml
<CustomField>
    <fullName>Q18_Why_wasn_t_your_problem_resolved__c</fullName>
    <label>Q18. Why wasn&#39;t your problem resolved?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>