unpackaged/main/default/objects/SurveyResult__c/fields/Q49_Sat__c.field-meta.xml
<CustomField>
    <fullName>Q49_Sat__c</fullName>
    <formula>CASE(  sat_Q49__c  , 0, 0, 25, 0, 50, 100, 75, 100, 100, 100,  sat_Q49__c )</formula>
    <label>Q49 Sat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>