unpackaged/main/default/objects/SurveyResult__c/fields/Q8_Why_you_have_rated_as_poor_or_fair__c.field-meta.xml
<CustomField>
    <fullName>Q8_Why_you_have_rated_as_poor_or_fair__c</fullName>
    <label>Q8. Why you have rated as Poor or fair?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>