unpackaged/main/default/objects/SurveyResult__c/fields/Q9_Why_you_have_rated_as_good_or_exlnt__c.field-meta.xml
<CustomField>
    <fullName>Q9_Why_you_have_rated_as_good_or_exlnt__c</fullName>
    <label>Q9. Why you have rated as good or exlnt?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>