unpackaged/main/default/objects/SurveyResult__c/fields/Repurchase_AV__c.field-meta.xml
<CustomField>
    <fullName>Repurchase_AV__c</fullName>
    <label>Repurchase AV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Definitely Wouldn&#39;t</fullName>
            </value>
            <value>
                <fullName>Probably Wouldn&#39;t</fullName>
            </value>
            <value>
                <fullName>Probably Would</fullName>
            </value>
            <value>
                <fullName>Definitely Would</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>