unpackaged/main/default/objects/SurveyResult__c/fields/Resolving_Problems__c.field-meta.xml
<CustomField>
    <fullName>Resolving_Problems__c</fullName>
    <label>Resolving Problems</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>