unpackaged/main/default/objects/SurveyResult__c/fields/Right_First_Time__c.field-meta.xml
<CustomField>
    <fullName>Right_First_Time__c</fullName>
    <label>Right First Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>