unpackaged/main/default/objects/SurveyResult__c/fields/ROI_improvement_comments__c.field-meta.xml
<CustomField>
    <fullName>ROI_improvement_comments__c</fullName>
    <label>ROI improvement comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>