unpackaged/main/default/objects/SurveyResult__c/fields/SAT1_Onsite_Staff_Support__c.field-meta.xml
<CustomField>
    <fullName>SAT1_Onsite_Staff_Support__c</fullName>
    <formula>CASE(  Sat_Onsite_Staff_Support__c  , 1, 0, 2, 25, 3, 50, 4, 75, 5, 100,  Sat_Onsite_Staff_Support__c )</formula>
    <label>SAT_Onsite Staff &amp; Support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>