unpackaged/main/default/objects/SurveyResult__c/fields/Sat_Expresso__c.field-meta.xml
<CustomField>
    <fullName>Sat_Expresso__c</fullName>
    <label>Sat.Expresso</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>