unpackaged/main/default/objects/SurveyResult__c/fields/Sat_Furniture__c.field-meta.xml
<CustomField>
    <fullName>Sat_Furniture__c</fullName>
    <label>Sat.Furniture</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>