unpackaged/main/default/objects/SurveyResult__c/fields/Sat_Graphics__c.field-meta.xml
<CustomField>
    <fullName>Sat_Graphics__c</fullName>
    <label>Sat.Graphics</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>