unpackaged/main/default/objects/SurveyResult__c/fields/Sat_Mains_power__c.field-meta.xml
<CustomField>
    <fullName>Sat_Mains_power__c</fullName>
    <label>Sat.Mains power</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>