unpackaged/main/default/objects/SurveyResult__c/fields/Sat_Manual__c.field-meta.xml
<CustomField>
    <fullName>Sat_Manual__c</fullName>
    <label>Sat.Manual</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>