unpackaged/main/default/objects/SurveyResult__c/fields/Sat_Onsite_Staff_Support__c.field-meta.xml
<CustomField>
    <fullName>Sat_Onsite_Staff_Support__c</fullName>
    <label>Sat.Onsite Staff &amp; Support</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>