unpackaged/main/default/objects/SurveyResult__c/fields/Sat_Package_items__c.field-meta.xml
<CustomField>
    <fullName>Sat_Package_items__c</fullName>
    <label>Sat.Package items</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>