unpackaged/main/default/objects/SurveyResult__c/fields/sat_Q65__c.field-meta.xml
<CustomField>
    <fullName>sat_Q65__c</fullName>
    <label>sat.Q65</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>