unpackaged/main/default/objects/SurveyResult__c/fields/Sat_Specialist_Lighting__c.field-meta.xml
<CustomField>
    <fullName>Sat_Specialist_Lighting__c</fullName>
    <label>Sat.Specialist Lighting</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>