unpackaged/main/default/objects/SurveyResult__c/fields/Sat_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Sat_Telephone__c</fullName>
    <label>Sat.Telephone</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>