unpackaged/main/default/objects/SurveyResult__c/fields/Service_Desk_Sat__c.field-meta.xml
<CustomField>
    <fullName>Service_Desk_Sat__c</fullName>
    <formula>CASE(  Sat_Service_desk__c  , 0, 0, 25, 0, 50, 100, 75, 100, 100, 100,  Sat_Service_desk__c )</formula>
    <label>Service Desk Sat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>