unpackaged/main/default/objects/SurveyResult__c/fields/Services_already_aware_of__c.field-meta.xml
<CustomField>
    <fullName>Services_already_aware_of__c</fullName>
    <label>Services already aware of</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AV (Blitz/GES)</fullName>
            </value>
            <value>
                <fullName>Carpet Hire</fullName>
            </value>
            <value>
                <fullName>Carpet Outright</fullName>
            </value>
            <value>
                <fullName>Carpet Removal</fullName>
            </value>
            <value>
                <fullName>Carpet Tiles</fullName>
            </value>
            <value>
                <fullName>Custom Build</fullName>
            </value>
            <value>
                <fullName>Electrical Services</fullName>
            </value>
            <value>
                <fullName>Expresso</fullName>
            </value>
            <value>
                <fullName>Furniture hire</fullName>
            </value>
            <value>
                <fullName>Graphics</fullName>
            </value>
            <value>
                <fullName>Logistical services</fullName>
            </value>
            <value>
                <fullName>N200|GES Visit Connect</fullName>
            </value>
            <value>
                <fullName>Service Desk</fullName>
            </value>
            <value>
                <fullName>Shell Scheme Stand</fullName>
            </value>
            <value>
                <fullName>Specialist Lighting</fullName>
            </value>
            <value>
                <fullName>Standfitting</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>