unpackaged/main/default/objects/SurveyResult__c/fields/Shell_Carpet_Sat__c.field-meta.xml
<CustomField>
    <fullName>Shell_Carpet_Sat__c</fullName>
    <formula>CASE(  Sat_Shell_Carpet__c  , 0, 0, 25, 0, 50, 100, 75, 100, 100, 100,  Sat_Shell_Carpet__c )</formula>
    <label>Shell Carpet Sat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>