unpackaged/main/default/objects/SurveyResult__c/fields/Social_media_channel_s_used__c.field-meta.xml
<CustomField>
    <fullName>Social_media_channel_s_used__c</fullName>
    <label>Social media channel/s used</label>
    <length>254</length>
    <type>Text</type>
</CustomField>