unpackaged/main/default/objects/SurveyResult__c/fields/Stand_Fitting_Sat__c.field-meta.xml
<CustomField>
    <fullName>Stand_Fitting_Sat__c</fullName>
    <formula>CASE(  Sat_Stand_Fitting__c  , 0, 0, 25, 0, 50, 100, 75, 100, 100, 100,  Sat_Stand_Fitting__c )</formula>
    <label>Stand Fitting Sat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>