unpackaged/main/default/objects/SurveyResult__c/fields/Team_of_person_dealt_with__c.field-meta.xml
<CustomField>
    <fullName>Team_of_person_dealt_with__c</fullName>
    <label>Team of person dealt with</label>
    <length>254</length>
    <type>Text</type>
</CustomField>