unpackaged/main/default/objects/SurveyResult__c/fields/Telephone_Sat__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Sat__c</fullName>
    <formula>CASE(  Sat_Telephone__c  , 0, 0, 25, 0, 50, 100, 75, 100, 100, 100,  Sat_Telephone__c )</formula>
    <label>Telephone Sat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>