unpackaged/main/default/objects/SurveyResult__c/fields/Used_Changes_to_furniture_items__c.field-meta.xml
<CustomField>
    <fullName>Used_Changes_to_furniture_items__c</fullName>
    <label>Used.Changes to furniture items</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>