unpackaged/main/default/objects/SurveyResult__c/fields/Used_Other_aware_of__c.field-meta.xml
<CustomField>
    <fullName>Used_Other_aware_of__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used.Other aware of</label>
    <type>Checkbox</type>
</CustomField>