unpackaged/main/default/objects/SurveyResult__c/fields/Used_Stand_type_through_organiser__c.field-meta.xml
<CustomField>
    <fullName>Used_Stand_type_through_organiser__c</fullName>
    <label>Used.Stand type through organiser</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Space Only</fullName>
            </value>
            <value>
                <fullName>Basic Shell Scheme</fullName>
            </value>
            <value>
                <fullName>Shell Package</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>