unpackaged/main/default/objects/SurveyResult__c/fields/Visited_GES_Service_desk__c.field-meta.xml
<CustomField>
    <fullName>Visited_GES_Service_desk__c</fullName>
    <label>Visited GES Service desk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>