unpackaged/main/default/objects/SurveyResult__c/fields/What_do_you_think_GES_can_Improve__c.field-meta.xml
<CustomField>
    <fullName>What_do_you_think_GES_can_Improve__c</fullName>
    <label>What do you think GES can Improve?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>