unpackaged/main/default/objects/SurveyResult__c/fields/When_did_your_issue_occur__c.field-meta.xml
<CustomField>
    <fullName>When_did_your_issue_occur__c</fullName>
    <label>When did your issue occur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-show</fullName>
            </value>
            <value>
                <fullName>During show build</fullName>
            </value>
            <value>
                <fullName>While the show was open</fullName>
            </value>
            <value>
                <fullName>During the breakdown</fullName>
            </value>
            <value>
                <fullName>Post-show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>