unpackaged/main/default/objects/SurveyResult__c/fields/Why_did_not_visit_Service_desk__c.field-meta.xml
<CustomField>
    <fullName>Why_did_not_visit_Service_desk__c</fullName>
    <label>Why did not visit Service desk</label>
    <length>254</length>
    <type>Text</type>
</CustomField>