unpackaged/main/default/objects/SurveyResult__c/fields/X1sttime_Furniture_Change__c.field-meta.xml
<CustomField>
    <fullName>X1sttime_Furniture_Change__c</fullName>
    <label>1sttime.Furniture Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>