unpackaged/main/default/objects/SurveyResult__c/fields/X1sttime_Other_GES_product_service__c.field-meta.xml
<CustomField>
    <fullName>X1sttime_Other_GES_product_service__c</fullName>
    <label>1sttime.Other GES product/service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>