unpackaged/main/default/objects/SurveyResult__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Industry__c</columns>
    <columns>First_time_Exhibitor__c</columns>
    <columns>Overall_satisfaction__c</columns>
    <columns>Ease_of_business__c</columns>
    <columns>Focus_Groups_Opt_In__c</columns>
    <columns>Event_met_ROI_expectations__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>