unpackaged/main/default/objects/SurveyResult__c/listViews/Survey_Results_Last_Month.listView-meta.xml
<ListView>
    <fullName>Survey_Results_Last_Month</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Sat_AV__c</columns>
    <columns>Sat_D_B__c</columns>
    <columns>Sat_Electrics__c</columns>
    <columns>Sat_Email__c</columns>
    <columns>Sat_Expresso__c</columns>
    <columns>Sat_Floor_Covering__c</columns>
    <columns>Sat_Furniture__c</columns>
    <columns>Sat_Graphics__c</columns>
    <columns>Sat_Live_Chat__c</columns>
    <columns>Sat_Logistics__c</columns>
    <columns>Sat_Mains_power__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Survey Results Last Month</label>
    <language>en_US</language>
</ListView>