unpackaged/main/default/objects/SurveyResult__c/listViews/Survey_Results_This_Month.listView-meta.xml
<ListView>
    <fullName>Survey_Results_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Recommend_GES_to_Friends_or_Colleagues__c</columns>
    <columns>Overall_Experience_with_GES__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Survey Results This Month</label>
    <language>en_US</language>
</ListView>